[package]
name = "egui_winit_platform"
version = "0.4.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"
description = "Platform code to use egui with winit."
homepage = "https://github.com/hasenbanck/egui_winit_platform"
repository = "https://github.com/hasenbanck/egui_winit_platform"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
egui = "0.8"
winit = "0.24"
clipboard = { version = "0.5.0", optional = true}
webbrowser = { version = "0.5.5", optional = true }
